<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A5D6A7"
    tools:context=".GuessPage">

    <TextView
        android:id="@+id/textCenter2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="29dp"
        android:gravity="center"
        android:text="@string/textview"
        android:textSize="11pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="25dp"
        android:text="@string/can_you_guess_what_it_is"
        android:textAlignment="center"
        android:textSize="13pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCenter2" />

    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="11dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/checkMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/valueTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="37dp"
        android:autofillHints=""
        android:background="#263238"
        android:ems="10"
        android:hint="@string/enter_the_number"
        android:inputType="numberSigned"
        android:textAlignment="center"
        android:textColor="#F2f4f4"
        android:textColorHint="#F2f4f4"
        app:layout_constraintBottom_toTopOf="@+id/btnCheckValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkMessage"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnCheckValue"
        android:layout_width="115dp"
        android:layout_height="0dp"
        android:layout_marginBottom="38dp"
        android:background="#58D68D"
        android:text="@string/check_number"
        app:layout_constraintBottom_toTopOf="@+id/generateNewNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valueTextView" />

    <TextView
        android:id="@+id/checkMessage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:background="#263238"
        android:gravity="center"
        android:hint="@string/guess"
        android:text="@string/message"
        android:textColor="#F2f4f4"
        android:textColorHint="#F2f4f4"
        android:textSize="8pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/valueTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <Button
        android:id="@+id/generateNewNumber"
        android:layout_width="172dp"
        android:layout_height="0dp"
        android:layout_marginBottom="229dp"
        android:background="#F44336"
        android:text="@string/generate_new_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCheckValue" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:alpha="0.7"
        android:contentDescription="@string/TODO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCheckValue"
        app:srcCompat="@drawable/num"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>